--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
 <body>
   <!-- <app-home></app-home> -->
   <!-- <app-order></app-order> -->
-  <app-order-confirm></app-order-confirm>
+  <!-- <app-order-confirm></app-order-confirm> -->
   <!-- <app-login></app-login> -->
   <!-- <app-register></app-register> -->
   <!-- <app-detail-product></app-detail-product> -->
+   <app-root></app-root>
 </body>
 </html>
